# rules_ci

./: .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  README.md.tmpl
.github/workflows/: ci.yml
ci/: BUILD.bazel  defs.bzl  not_vacuous_test.sh  publish_runner.sh
docs/: DESIGN.md  VERSIONING.md
docs/api/: BUILD.bazel
examples/native_project/: BUILD.bazel  no_pipeline_file_test.sh
examples/pipeline/: BUILD.bazel  job_alias_not_vacuous_test.sh  tagged_unit_test.sh
hooks/: BUILD.bazel  defs.bzl
ir/: BUILD.bazel  README.md
project/: BUILD.bazel  defs.bzl
proto/fastverk/release/v1/: BUILD.bazel  release.proto
release/: defs.bzl
rules/: BUILD.bazel  defs.bzl
schemas/: BUILD.bazel  extensions.bzl
translator/: BUILD.bazel  Cargo.toml
translator/aggregator/: BUILD.bazel  Cargo.toml
translator/aggregator/src/: main.rs
translator/ci-ir/: BUILD.bazel  Cargo.toml
translator/ci-ir/src/: lib.rs
translator/gitlab-parse/: BUILD.bazel  Cargo.toml
translator/gitlab-parse/src/: lib.rs
version/: diff.mjs  escalate.mjs  proto.mjs  surface.mjs  version.mjs
version/fixtures/: add.d.ts  base.d.ts  change.d.ts  remove.d.ts
