[workspace]
resolver = "2"
members = [
    "ci-ir",
    "gitlab-parse",
    "aggregator",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

# Workspace-pinned dependencies. The narrow set reflects the
# scaffold scope — the parser side stays at `serde_yaml` + `serde`
# for now; `starlark`, `lean-runtime-equivalent`, github + bazel
# emit deps land per-roadmap as the corresponding crates ship.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
