load("@rules_rust//rust:defs.bzl", "rust_library")
load("@rules_ci_crates//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

exports_files(["Cargo.toml"])

# gitlab-parse: parse `.gitlab-ci.yml` into the ci-ir IR. Path dep → //translator/ci-ir.
rust_library(
    name = "gitlab_parse",
    srcs = ["src/lib.rs"],
    crate_root = "src/lib.rs",
    edition = "2021",
    deps = ["//translator/ci-ir:ci_ir"] + all_crate_deps(package_name = "translator/gitlab-parse"),
)
