[package]
name = "gitlab-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parse `.gitlab-ci.yml` into the rules_ci_ir IR."

[dependencies]
ci-ir = { path = "../ci-ir" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
indexmap.workspace = true
anyhow.workspace = true
