# Canonical release/versioning DTOs. Compiled HERMETICALLY (rules_proto's protoc toolchain —
# no system protoc). The descriptor set output (release_proto-descriptor-set.proto.bin) is the
# single source of truth the Node version/ tools load via protobufjs, and what any other-language
# consumer (e.g. a future Lean surface extractor) reads.
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "release_proto",
    srcs = ["release.proto"],
)
